--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "ol": "6.6.x"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.9.5",
+    "@plone/scripts": "*",
+    "@cypress/code-coverage": "^3.10.0",
+    "cypress-fail-fast": "^5.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "md5": "^2.3.0"
   },
